# CG-A3

assignment3/model_viewer/: CMakeLists.txt  README.md
assignment3/model_viewer/cubemaps/Forrest/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/0.125/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/0.5/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/128/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/2/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/2048/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/32/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/512/: Thumbs.db
assignment3/model_viewer/cubemaps/Forrest/prefiltered/8/: Thumbs.db
assignment3/model_viewer/cubemaps/LarnacaCastle/: Thumbs.db
assignment3/model_viewer/cubemaps/RomeChurch/: Thumbs.db
assignment3/model_viewer/cubemaps/debug/: Thumbs.db
assignment3/model_viewer/cubemaps/reference/: Thumbs.db
assignment3/model_viewer/src/: model_viewer.cpp
assignment3/model_viewer/src/shaders/: mesh.frag  mesh.vert  skybox.frag  skybox.vert
